# ezpype

./: README.md  pyproject.toml
ezpype/: ezpype.py
